web-infras/parser/tests/fixtures/babel/core/uncategorised/461/output.txt
[SyntaxError]: label not found. (1,40)
1|x: while (true) { (function () { break x; }); }
 |                                      ^
